--- a/dawbase/pages/about.html
+++ b/dawbase/pages/about.html
@@ -14,9 +14,9 @@
     <header class="bg-white">
         <navbar-component></navbar-component>
     </header>
-    <h1>Quien es Catering Experts </h1>
+    <h1>¿Quienes somos? </h1>
     <p>
-        
+        con mas de 4 años de experiencia en el mercado.
         Nacemos en el año 2020 durante la pandemia 
         del covid 19, esto nos ayudo a ser resilientes
         desde el principio, enfocandonos siempre en
