--- a/dawbase/pages/contacto.html
+++ b/dawbase/pages/contacto.html
@@ -34,7 +34,7 @@
         <navbar-component></navbar-component>
     </header>
 
-    <h2>Contactanos mediante nuestras redes sociales</h2>
+    <h2>Contactanos en nuestras redes sociales</h2>
 
     <table>
       <tr>
