Actualizacion en el navbar component

--- a/dawbase/pages/contacto.html
+++ b/dawbase/pages/contacto.html
@@ -26,7 +26,7 @@
     </script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="/components/NavbarComponent.js"></script>
-    <script src="js/mail.js"></script>
+    <script src="/js/mail.js"></script>
   </head>
   <body class="font-[Fredoka] bg-white h-screen">
 
