--- a/dawbase/pages/team.html
+++ b/dawbase/pages/team.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/output.css">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="/components/NavbarComponent.js"></script>
+    <script src="/components/FooterComponent.js"></script>
 </head>
 <body class="font-[Fredoka] bg-white h-screen">
     <header class="bg-white">
