--- a/dawbase/pages/customers.html
+++ b/dawbase/pages/customers.html
@@ -13,6 +13,6 @@
     <header class="bg-white">
         <navbar-component></navbar-component>
     </header>
-    <script src="js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 </body>
 </html>
