Se agregó un gradiente como fondo para el body de todas las páginas

--- a/dawbase/index.html
+++ b/dawbase/index.html
@@ -11,7 +11,7 @@
     <script src="/components/NavbarComponent.js"></script>
   </head>
   <body class="font-[Fredoka] h-screen">
-    <header class="bg-white">
+    <header class="header">
       <navbar-component></navbar-component>
     </header>
     <main class="flex flex-col w-[92%] mx-auto my-14 main">
