--- a/dawbase/pages/about.html
+++ b/dawbase/pages/about.html
@@ -11,7 +11,7 @@
     <script src="../components/NavbarComponent.js"></script>
 </head>
 <body class="font-[Fredoka] bg-white h-screen">
-    <header class="bg-white">
+    <header class="header">
         <navbar-component></navbar-component>
     </header>
     <h1>¿Quienes somos? </h1>
