--- a/dawbase/pages/contacto.html
+++ b/dawbase/pages/contacto.html
@@ -41,7 +41,7 @@
     </script>
   </head>
   <body class="font-[Fredoka] bg-white h-screen">
-    <header class="bg-white">
+    <header class="header">
         <navbar-component></navbar-component>
     </header>
     <main class="main">
