--- a/dawbase/pages/customers.html
+++ b/dawbase/pages/customers.html
@@ -10,7 +10,7 @@
     <script src="/components/NavbarComponent.js"></script>
 </head>
 <body class="font-[Fredoka] bg-white h-screen">
-    <header class="bg-white">
+    <header class="header">
         <navbar-component></navbar-component>
     </header>
     <script src="/js/menu.js"></script>
