--- a/dawbase/pages/about.html
+++ b/dawbase/pages/about.html
@@ -23,6 +23,42 @@
         brindar un servicio espectacular a nuestros clientes.
 
     </p>
+    <section class="mb-8">
+        <h2 class="text-3xl font-semibold mb-2">Nuestra Misión</h2>
+        <p class="text-lg">
+            Nuestra misión es proporcionar soluciones innovadoras que faciliten la vida de nuestros 
+            clientes, asegurándonos de ofrecer productos y servicios de alta calidad que superen sus 
+            expectativas.
+        </p>
+    </section>
+
+    <section class="mb-8">
+        <h2 class="text-3xl font-semibold mb-2">Nuestra Visión</h2>
+        <p class="text-lg">
+            Ser reconocidos como líderes en nuestro sector, destacándonos por nuestra capacidad de 
+            adaptación y compromiso con la excelencia, para construir un futuro mejor y más sostenible 
+            para todos.
+        </p>
+    </section>
+
+    <section class="mb-8">
+        <h2 class="text-3xl font-semibold mb-2">Nuestros Valores</h2>
+        <ul class="list-disc list-inside text-lg">
+            <li>Innovación: Nos esforzamos por estar a la vanguardia de la tecnología.</li>
+            <li>Compromiso: Estamos dedicados a cumplir nuestras promesas.</li>
+            <li>Calidad: Ofrecemos productos y servicios de la más alta calidad.</li>
+            <li>Resiliencia: Nos adaptamos y crecemos frente a los desafíos.</li>
+            <li>Cliente: El cliente es el centro de todo lo que hacemos.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2 class="text-3xl font-semibold mb-2">Nuestro Equipo</h2>
+        <p class="text-lg mb-4">
+            Contamos con un equipo de profesionales altamente capacitados y apasionados por su trabajo. 
+            Nuestra diversidad de habilidades y experiencias nos permite abordar cualquier desafío con 
+            creatividad y eficacia.
+        </p>
     <script src="../js/menu.js"></script>
 </body>
 </html>
