--- a/dawbase/pages/customers.html
+++ b/dawbase/pages/customers.html
@@ -6,6 +6,7 @@
     <title>Clientes</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <link rel="stylesheet" href="/css/output.css">
+    <link rel="shortcut icon" href="/images/heart.svg" type="image/x-icon">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="/components/NavbarComponent.js"></script>
 </head>
