--- a/dawbase/pages/contacto.html
+++ b/dawbase/pages/contacto.html
@@ -4,15 +4,12 @@
     <link rel="stylesheet" href="/css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="acción"
-      content="segundos"
-      ;
-      url="https://www.facebook.com/UESoficial.SV"
+    <meta http-equiv="acción" content="segundos" url="https://www.facebook.com/UESoficial.SV"
     />
     <title>Contactanos</title>
     <link rel="stylesheet" href="/css/contacto.css" type="text/css" />
     <link rel="stylesheet" href="/css/output.css">
+    <link rel="shortcut icon" href="/images/heart.svg" type="image/x-icon">
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
@@ -62,35 +59,40 @@
           </button>  
         </form>
       </section>
+      <section class="main__others">
+        <div class="main__members">
+          <h2 class="main__subtitle">Integrantes</h2>
+          <ul class="main__list">
+            <li class="main__item">MV22023 - MV22023@ues.edu.sv</li>
+            <li class="main__item">CC22070 - cc22070@ues.edu.sv</li>
+            <li class="main__item">CV22022 - CV22022@ues.edu.sv</li>
+            <li class="main__item">GL12016 - GL12016@ues.edu.sv</li>
+            <li class="main__item">MM03168 - MM03168@ues.edu.sv</li>
+          </ul>
+        </div>
+        <div class="main__social__medias">
+          <h2 class="main__subtitle">Redes Sociales</h2>
+          <div class="icons">
+            <a href="https://www.facebook.com/UESoficial.SV" class="icon__item"><img src="/images/fb.png" class="icon__image" />
+            </a>
+            <a href="https://twitter.com/UESoficial" class="icon__item"><img src="/images/twitter_x.png" class="icon__image"/>
+            </a>
+            <a href="https://wa.me/+50378423999" class="icon__item"><img src="/images/whatsapp.png"  class="icon__image"/>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
-    <!-- <div style="position:absolute; left: 58%; bottom: 0%;">
-      <p>Contactanos mediante nuestras redes sociales</p>
-    </div>
-    <div class="absolute bottom-0 left-0" style="position:absolute; left: 80%; bottom: 0%;">
-        <a href="https://www.facebook.com/UESoficial.SV">
-            <button class="btn fb" type="button"> <img src="/images/fb.png" height ="50" width="50" /></button>
-        </a>
-        <a href="https://twitter.com/UESoficial">
-            <button class="btn twtt" type="button"> <img src="/images/twitter_x.png" height ="50" width="50" /></button>
-        </a>
-        <a href="https://wa.me/78423999">
-            <button class="btn whtpp" type="button"> <img src="/images/whatsapp.png" height ="50" width="50" /></button>
-        </a>
-        </div> -->
-
-     
-    <details class="bg-gray-300 open:bg-amber-200 duration-300">
-            <summary class="bg-inherit px-5 py-3 text-lg cursor-pointer">Integrantes</summary>
-            <div class="bg-white px-5 py-3 border border-gray-300 text-sm font-light">
-                CC22070 - cc22070@ues.edu.sv,<br> CV22022 -CV22022@ues.edu.sv,<br> GL12016
-      -GL12016@ues.edu.sv,<br> MM03168 -MM03168@ues.edu.sv,<br> MV22023
-      -MV22023@ues.edu.sv
-            </div>
-        </details>
-
-    <div>
-  
-    </div>
+    <footer class="footer">
+      <div class="footer__picture">
+        <img src="/images/ues.png" class="footer__image" />
+        <p class="footer__class">Desarrollo de Aplicaciones Web</p>
+      </div>
+      <div class="footer__links">
+        <a href="/pages/about.html">Sobre Nosotros</a>
+        <a href="/pages/contacto.html">Contacto</a>
+      </div>
+    </footer>
   <script src="/js/menu.js"></script>
   </body>
 </html>
